--- a/index.html
+++ b/index.html
@@ -4,12 +4,38 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Project</title>
+  <title>Minimalist portfolio</title>
   <link rel="stylesheet" href="css/normalize.min.css">
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
 
+  <header class="header">
+    <div class="container">
+      <div class="header__inner">
+        <a href="#" class="logo">
+          <img class="logo__img" src="img/logo.svg" alt="Site logo" width="60" height="32">
+        </a>
+        
+        <button type="button" class="hamburger js-hamburger">
+          <span></span>
+        </button>
+        <nav class="sitenav">
+          <ul class="sitenav__list">
+            <li class="sitenav__item">
+              <a href="#" class="sitenav__link">Home</a>
+            </li>
+            <li class="sitenav__item">
+              <a href="#" class="sitenav__link">Portfolio</a>
+            </li>
+            <li class="sitenav__item">
+              <a href="contact.html" class="sitenav__link">Contact me</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+  </header>
 
   <script src="js/main.js"></script>
 </body>
