--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Minimalist portfolio</title>
-  <!-- <link rel="stylesheet" href="css/normalize.min.css"> -->
+  <link rel="stylesheet" href="css/normalize.min.css">
   <!-- <link rel="stylesheet" href="css/styles.css"> -->
-  <link rel="stylesheet" href="css/styles.min.css">
+  <!-- <link rel="stylesheet" href="css/styles.min.css"> -->
+  <link rel="stylesheet" href="css/sstyles.css">
 </head>
 <body>
 
@@ -39,7 +40,7 @@
   </header>
 
 
-  <main>
+  <!-- <main>
     <section class="hero">
       <h2 class="visually-hidden">ko'rinmas h2 tegi bor</h2>
       <div class="container">
@@ -84,9 +85,9 @@
         </div>
       </div>
     </section>
-  </main>
+  </main> -->
 
-  <footer>
+  <!-- <footer>
     <div class="container">
       <div class="footer__inner">
         <a href="#" class="logo">
@@ -129,7 +130,7 @@
       </div>
 
     </div>
-  </footer>
+  </footer> -->
   <script src="js/main.js"></script>
 </body>
 </html>
